// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidePanel component should render with left positioned by degfault 1`] = `
.c0 {
  height: 100vh;
  background-color: #F5F5F5;
  width: 0px;
  position: fixed;
  z-index: 1;
  top: 0;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  left: 0;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`SidePanel component should render with right positioned when position prop given as right 1`] = `
.c0 {
  height: 100vh;
  background-color: #F5F5F5;
  width: 0px;
  position: fixed;
  z-index: 1;
  top: 0;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  right: 0;
}

<div>
  <div
    class="c0"
  />
</div>
`;
